--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <user-permission android:name="android.permissiong.INTERNET" />
-    <user-permission android:name="android.permissiong.SYSTEM_ALERT_WINDOW" />
-    <user-permission android:name="android.permissiong.DISABLE_KEYGUARD" />
-    <user-permission android:name="android.permissiong.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <application
         android:label="Math Calculator"
         android:name="${applicationName}"
