--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   math_expressions: ^2.6.0
+  top_snackbar_flutter: ^3.2.0
 
 dev_dependencies:
   flutter_test:
