--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.2.1
   math_expressions: ^2.6.0
   top_snackbar_flutter: ^3.2.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
